--- a/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
+++ b/MyShop/MyShop.DataAccess.SQL/MyShop.DataAccess.SQL.csproj
@@ -56,6 +56,10 @@
     <Compile Include="Migrations\202012080657168_Initial.designer.cs">
       <DependentUpon>202012080657168_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012150253562_AddBasket.cs" />
+    <Compile Include="Migrations\202012150253562_AddBasket.designer.cs">
+      <DependentUpon>202012150253562_AddBasket.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLRepository.cs" />
@@ -73,6 +77,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202012080657168_Initial.resx">
       <DependentUpon>202012080657168_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012150253562_AddBasket.resx">
+      <DependentUpon>202012150253562_AddBasket.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
